# TestTask

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 03ba8721730f_add_room_and_presentation_with_many_to_.py  2bd3aa325f14_basemodel_and_usertest.py  3b51bc0b0485_all_models.py  596094387a5c_add_room_and_presentation_with_many_to_.py  68fe64edc7ba_add_room_and_presentation_with_many_to_.py  81b5e088bc93_add_room_and_presentation_with_many_to_.py  86dbc00b6978_add_refresh_token_to_user.py  91f48cec9e24_add_room_and_presentation_with_many_to_.py  aaad97f941eb_add_room_and_presentation_with_many_to_.py  ab369e725567_test.py  ad1e292f1911_basemodel_and_usertest.py  b70cc6e7738f_add_room_and_presentation_with_many_to_.py  bf9cb846f2cc_add_room_and_presentation_with_many_to_.py  c0e412f77a79_all_models.py  d471dced93e1_add_room_and_presentation_with_many_to_.py  e89137c72739_add_room_and_presentation_with_many_to_.py  f3f15c843f5c_all_models.py
app/: main.py
app/crud/: __init__.py  auth.py  events.py  users.py
app/db/: __init__.py  database.py
app/db/models/: __init__.py  enums.py  events.py  users.py
app/dependencies/: __init__.py  db_dependency.py  user_dependecies.py  user_dependencies.py
app/routes/: __init__.py  event_routes.py  user_routes.py
app/schemas/: __init__.py  events.py  users.py
tests/: test_user.py
